--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand"
-       href="#">Navbar</a>
+       [routerLink]="['home']">Front-End Web 200</a>
     <button class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
@@ -17,21 +17,13 @@
         <li class="nav-item">
           <a class="nav-link active"
              aria-current="page"
-             href="#">Home</a>
+             [routerLinkActive]="['active']"
+             [routerLink]="['home']">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link"
-             href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"
-             href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled"
-             href="#"
-             tabindex="-1"
-             aria-disabled="true">Disabled</a>
+             [routerLinkActive]="['active']"
+             [routerLink]="['todos']">Todos</a>
         </li>
       </ul>
     </div>
