Tracking how many items left on list

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,3 +6,7 @@
 <div class="alert alert-info">
   <p>Maybe some dashboardy type stuff here later.</p>
 </div>
+
+<div class="alert alert-info">
+  <p>You have {{ numberOfTodoItems$ | async}} left on your list! </p>
+</div>
