--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -25,6 +25,11 @@
              [routerLinkActive]="['active']"
              [routerLink]="['todos']">Todos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link"
+             [routerLinkActive]="['active']"
+             [routerLink]="['counter']">Redux Counter</a>
+        </li>
       </ul>
     </div>
   </div>
