Implemented Counter with Reset Button

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,3 +10,8 @@
 <div class="alert alert-info">
   <p>You have {{ numberOfTodoItems$ | async}} left on your list! </p>
 </div>
+
+<div class="alert alert-info">
+  <h3>Counter</h3>
+  <p>Your counter is at {{count$ | async}}</p>
+</div>
