--- a/src/app/components/counter/counter.component.html
+++ b/src/app/components/counter/counter.component.html
@@ -1,5 +1,7 @@
 <button (click)="decrement()"
-        class="btn btn-primary"></button>
+        class="btn btn-primary">-</button>
 <span>{{current$ | async}}</span>
 <button (click)="increment()"
         class="btn btn-primary">+</button>
+<button (click)="reset()"
+        class="btn btn-primary">Reset</button>
