--- a/src/app/components/counter/counter.component.html
+++ b/src/app/components/counter/counter.component.html
@@ -3,5 +3,8 @@
 <span>{{current$ | async}}</span>
 <button (click)="increment()"
         class="btn btn-primary">+</button>
-<button (click)="reset()"
-        class="btn btn-primary">Reset</button>
+<div>
+  <button (click)="reset()"
+          [disabled]="counterResetDisabled$ | async"
+          class="btn btn-danger">Reset</button>
+</div>
