Added functionality of disabling counter

--- a/src/app/components/counter/counter.component.html
+++ b/src/app/components/counter/counter.component.html
@@ -1,4 +1,5 @@
 <button (click)="decrement()"
+        [disabled]="decrementDisabled$ | async"
         class="btn btn-primary">-</button>
 <span>{{current$ | async}}</span>
 <button (click)="increment()"
@@ -8,3 +9,4 @@
           [disabled]="counterResetDisabled$ | async"
           class="btn btn-danger">Reset</button>
 </div>
+<app-count-by></app-count-by>
