--- a/src/app/features/music/music.component.html
+++ b/src/app/features/music/music.component.html
@@ -1,3 +1,29 @@
 <h2>Playlists and Stuff</h2>
+<section class="row">
+  <nav class="col-3">
+    <ul class="nav nav-pills flex-column">
 
-<router-outlet></router-outlet>
+
+
+      <li class="nav-item">
+        <a class="nav-link"
+           [routerLink]="['list']"
+           [routerLinkActive]="['active']">List of Songs</a>
+      </li>
+
+
+
+      <li class="nav-item">
+        <a class="nav-link"
+           [routerLink]="['entry']"
+           [routerLinkActive]="['active']">Add a New Song</a>
+      </li>
+    </ul>
+  </nav>
+
+
+
+  <div class="col">
+    <router-outlet></router-outlet>
+  </div>
+</section>
