--- a/src/app/features/music/components/entry/entry.component.html
+++ b/src/app/features/music/components/entry/entry.component.html
@@ -1,1 +1,42 @@
-<p>entry works!</p>
+<form [formGroup]="form"
+      (ngSubmit)="submit(focus)">
+  <div class="form-group">
+    <label for="title">Title</label>
+    <input type="text"
+           class="form-control"
+           name="title"
+           #focus
+           formControlName="title">
+    <div class="alert alert-danger"
+         *ngIf="title?.errors && (title?.touched || title?.dirty)">
+      <p>This is required</p>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="artist">Artist</label>
+    <input type="text"
+           class="form-field"
+           name="artist"
+           formControlName="artist">
+    <div class="alert alert-danger"
+         *ngIf="artist?.errors && (artist?.touched || artist?.dirty)">
+      <p>This is required</p>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="album">Album</label>
+    <input type="text"
+           class="form-field"
+           name="album"
+           formControlName="album">
+    <div class="alert alert-danger"
+         *ngIf="album?.errors && (album?.touched || album?.dirty)">
+      <p>This is required</p>
+    </div>
+  </div>
+
+  <button type="submit"
+          class="btn btn-primary">Add this Song</button>
+</form>
+
+<pre> {{ form.value | json }}</pre>
